public/stylesheets/global.css
body {
    background-color: #f8f9fa;
}

table {
    min-width: 500px;
}

.footer{
    color: #EEE;
    padding: 10px;
    left: 0;
    width: 100%;
    bottom: 0;
    position: fixed;
}

@media (max-width: 700px) {
    .footer {
        visibility: visible;
        border-top: 0.5px solid rgba(255, 255, 255, 0.454)
    }
    .header-icon{
        display: none !important;
    }
}


@media (min-width: 1080px) {
    .footer {
        visibility: hidden;
    }
    .header-icon{
        visibility: visible;
    }
}

